@@ -24,8 +24,8 @@
         <property name="mapcss.dir" location="${src.dir}/org/openstreetmap/josm/gui/mappaint/mapcss"/>
         <property name="proj-build.dir" location="${base.dir}/build2"/>
         <property name="epsg.output" location="${base.dir}/data/projection/custom-epsg"/>
-        <property name="groovy.jar" location="${base.dir}/tools/groovy-all-2.4.8.jar"/>
-        <property name="error_prone_ant.jar" location="${base.dir}/tools/error_prone_ant-2.0.19.jar"/>
+        <property name="groovy.jar" location="${base.dir}/tools/groovy-all-2.4.11.jar"/>
+        <property name="error_prone_ant.jar" location="${base.dir}/tools/error_prone_ant.jar"/>
         <property name="javac.compiler" value="com.google.errorprone.ErrorProneAntCompilerAdapter" />
         <!-- build parameter: compression level (ant -Dclevel=N)
                  N ranges from 0 (no compression) to 9 (maximum compression)
@@ -136,12 +136,15 @@ Build-Date: ${build.tstamp}
         <jar destfile="${dist.dir}/josm-custom.jar" basedir="${build.dir}" level="${clevel}">
             <!-- add attribute excludes="**/*BZip2*,**/*Bzip2*" to create a non-bzip2 supporting jar -->
             <manifest>
-                <attribute name="Main-class" value="JOSM"/>
+                <attribute name="Main-class" value="org.openstreetmap.josm.gui.MainApplication"/>
                 <attribute name="Main-Version" value="${version.entry.commit.revision} SVN"/>
                 <attribute name="Main-Date" value="${version.entry.commit.date}"/>
                 <attribute name="Permissions" value="all-permissions"/>
                 <attribute name="Codebase" value="josm.openstreetmap.de"/>
                 <attribute name="Application-Name" value="JOSM - Java OpenStreetMap Editor"/>
+                <!-- Java 9 stuff. Entries are safely ignored by Java 8 -->
+                <attribute name="Add-Exports" value="java.base/sun.security.util java.desktop/com.apple.eawt java.desktop/com.sun.imageio.spi jdk.deploy/com.sun.deploy.config" />
+                <attribute name="Add-Opens" value="java.base/java.lang java.base/jdk.internal.loader java.base/sun.security.x509 java.desktop/javax.imageio.spi java.desktop/javax.swing.text.html java.prefs/java.util.prefs" />
             </manifest>
             <zipfileset dir="images" prefix="images"/>
             <zipfileset dir="data" prefix="data"/>
@@ -229,6 +232,7 @@ Build-Date: ${build.tstamp}
             <!-- get rid of "internal proprietary API" warning -->
             <compilerarg value="-XDignore.symbol.file"/>
             <exclude name="org/apache/commons/compress/compressors/bzip2/BZip2Utils.java"/>
+            <exclude name="org/apache/commons/compress/compressors/brotli/**"/>
             <exclude name="org/apache/commons/compress/compressors/lzma/**"/>
             <exclude name="org/apache/commons/compress/compressors/xz/**"/>
             <exclude name="org/apache/commons/compress/compressors/CompressorStreamFactory.java"/>
@@ -272,7 +276,7 @@ Build-Date: ${build.tstamp}
         </javac>
         <!-- JMapViewer -->
         <javac compiler="${javac.compiler}" sourcepath="" srcdir="${src.dir}" 
-            excludes="com/**,oauth/**,org/apache/commons/**,org/glassfish/**,org/openstreetmap/gui/jmapviewer/Demo.java,org/openstreetmap/gui/jmapviewer/JMapViewerTree.java,org/openstreetmap/gui/jmapviewer/checkBoxTree/**,org/openstreetmap/josm/**,JOSM.java,gnu/**"
+            excludes="com/**,oauth/**,org/apache/commons/**,org/glassfish/**,org/openstreetmap/gui/jmapviewer/Demo.java,org/openstreetmap/gui/jmapviewer/JMapViewerTree.java,org/openstreetmap/gui/jmapviewer/checkBoxTree/**,org/openstreetmap/josm/**,gnu/**"
             destdir="build" target="1.8" source="1.8" debug="on" includeantruntime="false" createMissingPackageInfoClass="false" encoding="UTF-8">
             <compilerclasspath>
                 <pathelement location="${error_prone_ant.jar}"/>
@@ -318,6 +322,7 @@ Build-Date: ${build.tstamp}
             <compilerarg value="-Xep:FutureReturnValueIgnored:OFF" compiler="com.google.errorprone.ErrorProneAntCompilerAdapter"/>
             <compilerarg value="-Xep:FloatingPointLiteralPrecision:OFF" compiler="com.google.errorprone.ErrorProneAntCompilerAdapter"/>
             <compilerarg value="-Xep:ShortCircuitBoolean:OFF" compiler="com.google.errorprone.ErrorProneAntCompilerAdapter"/>
+            <compilerarg value="-Xep:LiteralClassName:OFF" compiler="com.google.errorprone.ErrorProneAntCompilerAdapter"/>
             <compilerarg line="-Xmaxwarns 1000"/>
         </javac>
 
@@ -430,13 +435,27 @@ Build-Date: ${build.tstamp}
         <attribute name="coverage" default="true"/>
         <sequential>
             <echo message="Running @{testfamily}@{testITsuffix} tests with JUnit"/>
-            <jacoco:coverage destfile="${test.dir}/jacoco@{testITsuffix}.exec" enabled="@{coverage}" excludes="jdk.dynalink.*:jdk.nashorn.*">
+            <jacoco:coverage destfile="${test.dir}/jacoco@{testITsuffix}.exec" enabled="@{coverage}" includes="org.openstreetmap.josm.*">
                 <junit printsummary="yes" fork="true" forkmode="once">
                     <jvmarg value="-Dfile.encoding=UTF-8"/>
+                    <jvmarg value="--add-modules" if:set="isJava9" />
+                    <jvmarg value="java.se.ee" if:set="isJava9" />
                     <jvmarg value="--add-exports" if:set="isJava9" />
                     <jvmarg value="java.base/sun.security.util=ALL-UNNAMED" if:set="isJava9" />
-                    <jvmarg value="--add-exports" if:set="isJava9" />
+                    <jvmarg value="--add-opens" if:set="isJava9" />
                     <jvmarg value="java.base/sun.security.x509=ALL-UNNAMED" if:set="isJava9" />
+                    <jvmarg value="--add-exports" if:set="isJava9" />
+                    <jvmarg value="jdk.deploy/com.sun.deploy.config=ALL-UNNAMED" if:set="isJava9" />
+                    <jvmarg value="--add-opens" if:set="isJava9" />
+                    <jvmarg value="java.base/java.io=ALL-UNNAMED" if:set="isJava9" />
+                    <jvmarg value="--add-opens" if:set="isJava9" />
+                    <jvmarg value="java.base/java.lang=ALL-UNNAMED" if:set="isJava9" />
+                    <jvmarg value="--add-opens" if:set="isJava9" />
+                    <jvmarg value="java.base/java.text=ALL-UNNAMED" if:set="isJava9" />
+                    <jvmarg value="--add-opens" if:set="isJava9" />
+                    <jvmarg value="java.base/java.util=ALL-UNNAMED" if:set="isJava9" />
+                    <jvmarg value="--add-opens" if:set="isJava9" />
+                    <jvmarg value="java.desktop/java.awt=ALL-UNNAMED" if:set="isJava9" />
                     <sysproperty key="josm.home" value="${test.dir}/config/@{testfamily}-josm.home"/>
                     <sysproperty key="josm.test.data" value="${test.dir}/data"/>
                     <sysproperty key="java.awt.headless" value="true"/>
@@ -481,8 +500,7 @@ Build-Date: ${build.tstamp}
         </junitreport>
         <jacoco:report>
             <executiondata>
-                <file file="${test.dir}/jacoco.exec"/>
-                <file file="${test.dir}/jacocoIT.exec"/>
+                <fileset dir="${test.dir}" includes="*.exec"/>
             </executiondata>
             <structure name="JOSM Test Coverage">
                 <classfiles>
@@ -516,7 +534,6 @@ Build-Date: ${build.tstamp}
             public static void main(java.lang.String[]);
         }
 
-        -keep class JOSM
         -keep class * extends org.openstreetmap.josm.io.FileImporter
         -keep class * extends org.openstreetmap.josm.io.FileExporter
         -keep class org.openstreetmap.josm.actions.search.SearchCompiler$Never
@@ -702,7 +719,11 @@ Build-Date: ${build.tstamp}
         <taskdef name="groovy" classname="org.codehaus.groovy.ant.Groovy" classpath="${groovy.jar};tools/commons-cli-1.3.1.jar"/>
         <echo message="Checking editor imagery difference"/>
         <groovy src="scripts/SyncEditorLayerIndex.groovy" classpath="${dist.dir}/josm-custom.jar">
-                <arg value="-noskip"/>
+                <arg value="-noeli"/>
+                <arg value="-p"/>
+                <arg value="imagery_eliout.imagery.xml"/>
+                <arg value="-q"/>
+                <arg value="imagery_josmout.imagery.xml"/>
         </groovy>
     </target>
 
@@ -710,19 +731,19 @@ Build-Date: ${build.tstamp}
         <exec append="false" executable="wget" failifexecutionfails="true">
             <arg value="https://josm.openstreetmap.de/maps"/>
             <arg value="-O"/>
-            <arg value="maps.xml"/>
+            <arg value="imagery_josm.imagery.xml"/>
             <arg value="--unlink"/>
         </exec>
         <exec append="false" executable="wget" failifexecutionfails="true">
             <arg value="https://josm.openstreetmap.de/wiki/ImageryCompareIgnores?format=txt"/>
             <arg value="-O"/>
-            <arg value="maps_ignores.txt"/>
+            <arg value="imagery_josm.ignores.txt"/>
             <arg value="--unlink"/>
         </exec>
         <exec append="false" executable="wget" failifexecutionfails="true">
             <arg value="https://raw.githubusercontent.com/osmlab/editor-layer-index/gh-pages/imagery.geojson"/>
             <arg value="-O"/>
-            <arg value="imagery.geojson"/>
+            <arg value="imagery_eli.geojson"/>
             <arg value="--unlink"/>
         </exec>
         <antcall target="imageryindex"/>
